--- a/startscreen.ui
+++ b/startscreen.ui
@@ -6,17 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
-    <height>960</height>
+    <width>400</width>
+    <height>700</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>startscreen</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(102, 255, 255);</string>
+  </property>
   <widget class="QPushButton" name="botton_start">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>140</x>
      <y>410</y>
      <width>115</width>
      <height>32</height>
@@ -29,8 +32,8 @@
   <widget class="QLabel" name="label_rule">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>270</y>
+     <x>180</x>
+     <y>260</y>
      <width>59</width>
      <height>16</height>
     </rect>
