--- a/source.qrc
+++ b/source.qrc
@@ -17,5 +17,10 @@
         <file>star.png</file>
         <file>turtle.png</file>
         <file>turtlebomb.png</file>
+        <file>title.png</file>
+        <file>titile.png</file>
+        <file>wallpaper-780624.jpg</file>
+        <file>bigstar.png</file>
+        <file>blackbigstar.png</file>
     </qresource>
 </RCC>
