--- a/result.ui
+++ b/result.ui
@@ -211,10 +211,10 @@
   <widget class="QPushButton" name="botton_start">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>30</x>
      <y>230</y>
-     <width>191</width>
-     <height>71</height>
+     <width>151</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="font">
@@ -233,6 +233,31 @@
     <string>restart</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="botton_start_2">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>230</y>
+     <width>151</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Letter Gothic Std</family>
+     <pointsize>18</pointsize>
+     <weight>75</weight>
+     <italic>false</italic>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 102, 102);</string>
+   </property>
+   <property name="text">
+    <string>end</string>
+   </property>
+  </widget>
   <zorder>label_4</zorder>
   <zorder>label</zorder>
   <zorder>bs2</zorder>
@@ -242,6 +267,7 @@
   <zorder>s1</zorder>
   <zorder>s3</zorder>
   <zorder>botton_start</zorder>
+  <zorder>botton_start_2</zorder>
  </widget>
  <resources>
   <include location="source.qrc"/>
